[package]
name = "tokio-socks5"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
futures = "0.1"
log = "0.4"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
trust-dns = { version = "0.16", default-features = false }
trust-dns-resolver = "0.11"

[dev-dependencies]
env_logger = "0.6"
